cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_conv2d(MLIRFunctionHandle function, MLIRValueHandle input, MLIRValueHandle weight, MLIRValueHandle bias, const int64_t *pad, const int64_t *stride, const int64_t *dilation, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_conv2d(MemorySegment function, MemorySegment input, MemorySegment weight, MemorySegment bias, MemorySegment pad, MemorySegment stride, MemorySegment dilation, MemorySegment resultType) {
        var mh$ = mlir_tosa_conv2d.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_conv2d", function, input, weight, bias, pad, stride, dilation, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, weight, bias, pad, stride, dilation, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_max_pool2d {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_max_pool2d");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_max_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_max_pool2d$descriptor() {
        return mlir_tosa_max_pool2d.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_max_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_max_pool2d$handle() {
        return mlir_tosa_max_pool2d.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_max_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_max_pool2d$address() {
        return mlir_tosa_max_pool2d.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_max_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_max_pool2d(MemorySegment function, MemorySegment input, MemorySegment kernel, MemorySegment stride, MemorySegment pad, MemorySegment resultType) {
        var mh$ = mlir_tosa_max_pool2d.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_max_pool2d", function, input, kernel, stride, pad, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, kernel, stride, pad, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_avg_pool2d {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_avg_pool2d");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_avg_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_avg_pool2d$descriptor() {
        return mlir_tosa_avg_pool2d.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_avg_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_avg_pool2d$handle() {
        return mlir_tosa_avg_pool2d.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_avg_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_avg_pool2d$address() {
        return mlir_tosa_avg_pool2d.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_avg_pool2d(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *kernel, const int64_t *stride, const int64_t *pad, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_avg_pool2d(MemorySegment function, MemorySegment input, MemorySegment kernel, MemorySegment stride, MemorySegment pad, MemorySegment resultType) {
        var mh$ = mlir_tosa_avg_pool2d.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_avg_pool2d", function, input, kernel, stride, pad, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, kernel, stride, pad, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_reshape {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_reshape");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reshape(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *newShape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_reshape$descriptor() {
        return mlir_tosa_reshape.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reshape(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *newShape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_reshape$handle() {
        return mlir_tosa_reshape.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reshape(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *newShape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reshape$address() {
        return mlir_tosa_reshape.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reshape(MLIRFunctionHandle function, MLIRValueHandle input, const int64_t *newShape, size_t numDims, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reshape(MemorySegment function, MemorySegment input, MemorySegment newShape, long numDims, MemorySegment resultType) {
        var mh$ = mlir_tosa_reshape.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_reshape", function, input, newShape, numDims, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, newShape, numDims, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_reduce_sum {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_reduce_sum");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_sum(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_reduce_sum$descriptor() {
        return mlir_tosa_reduce_sum.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_sum(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_reduce_sum$handle() {
        return mlir_tosa_reduce_sum.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_sum(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reduce_sum$address() {
        return mlir_tosa_reduce_sum.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reduce_sum(MLIRFunctionHandle function, MLIRValueHandle input, int64_t axis, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reduce_sum(MemorySegment function, MemorySegment input, long axis, MemorySegment resultType) {
        var mh$ = mlir_tosa_reduce_sum.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_reduce_sum", function, input, axis, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, axis, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_reduce_max {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_LONG,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_reduce_max");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
